# Pantagruel_S3T

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  PRD.md  README.md  README_experiments.md  pyproject.toml  rapport.md  requirements-dev.txt  requirements.txt
1_Transformer/: 3_spm.py  4_train.py  5_evaluate.py  6_infer.py  __init__.py  pipeline.py  quick_eval_hf_asr.py
2_speechLLM/: README.md  __init__.py  evaluate.py  infer.py  pipeline.py  recap_decodeurs.md  speechllm_common.py  speechllm_lib.py  train.py
3_Gemini/: __init__.py  evaluate_gemini.py  gemini_common.py  infer_gemini.py  pipeline.py
4_cascade/: README.md  __init__.py  cascade_common.py  evaluate_cascade.py  infer_cascade.py  pipeline.py
5_Pantagruel_multimodal/: README.md  __init__.py  evaluate_multimodal.py  infer_multimodal.py  multimodal_common.py  pipeline.py  train_multimodal.py
corpus_perso/: README_eval.md  corpus_perso_ref_EN.txt  corpus_perso_test.tsv  eval_profiles.yaml
docs/: PRD.md  corpus.html  estimation_ressources_fr_en.md  evaluation.html  index.html  pipeline.html  plan_amelioration_table8.md  plan_migration_speechllm.md  presentation_fr_en_pantagruel.md  presentation_fr_en_pantagruel_10slides.md  protocole_evaluation.md  protocole_utterance_pantagruel.md  rapport_historique_fairseq.md  rapport_pantagruel_uni_vers_article.md  resultats.html  speechllm.md  theme-init.js  theme.css  theme.js  variante-1.html  variante-2.html  variante-3.html  variante-4.html  variante-5.html  vocabulaire.html  vocabulaire.md
documentation/: PRD.md  corpus_oralite_externe.md  revue-site.md  (+8 more)
(+273 files in other folders)
