[project]
name = "s3t"
version = "0.1.0"
description = "Pantagruel speech translation replication"
requires-python = ">=3.10"

[tool.ruff]
target-version = "py310"
line-length = 88
src = [
    "scripts_communs",
    "1_Transformer",
    "2_speechLLM",
    "3_Gemini",
    "4_cascade",
    "tests",
]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = "-q"
